--- a/less/home-page.less
+++ b/less/home-page.less
@@ -46,6 +46,12 @@
         background-color: @yellow100;
       }
     }
+
+    #mapholder {
+      text-align: center;
+      width: 70%;
+      height: auto;
+    }
   }
 
   @media @phone {
