--- a/less/navigation.less
+++ b/less/navigation.less
@@ -58,6 +58,7 @@
         font-size: 1.2rem;
         text-decoration: none;
         padding: 2rem;
+        padding-top: 0rem;
 
         &:hover {
           color: white;
